--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
   "author": "flatironschool",
   "license": "Included in Repo",
   "devDependencies": {
-    "babel-core": "6.26.3",
+    "babel-core": "^4.7.16",
     "babel-preset-env": "1.7.0",
     "chai": "4.1.2",
-    "jsdom": "9.2.1",
-    "json-server": "^0.14.2",
-    "mocha": "5.2.0",
+    "jsdom": "^21.1.1",
+    "json-server": "^0.17.3",
+    "mocha": "^10.2.0",
     "mocha-multi": "1.0.1"
   },
   "dependencies": {
     "chai-spies": "^1.0.0",
-    "mocha-jsdom": "^2.0.0",
+    "mocha-jsdom": "^1.2.0",
     "nock": "^10.0.2",
     "node-fetch": "^2.6.1",
     "sinon": "^7.3.1"
